--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,4 @@
-# Visual Studio
-.vs/
-*.sln
-*.vcxproj*
-*.vcxproj.filters
+*exe
 
-# CMake
-out/
-build/
-CMakeCache.txt
-CMakeFiles/
-cmake_install.cmake
-Makefile
 
-# Binaries
-*.exe
-*.obj
-*.pdb
-*.ilk
-
-# vcpkg installed artifacts
-/vcpkg_installed/
 
